--- a/Sorting-Algorithms.ipynb
+++ b/Sorting-Algorithms.ipynb
@@ -111,11 +111,11 @@
     "                arr[k]=l[i]\n",
     "                i+=1\n",
     "            k+=1\n",
-    "        if(i<len(l)):\n",
+    "        while (i<len(l)):\n",
     "            arr[k]=l[i]\n",
     "            i+=1\n",
     "            k+=1\n",
-    "        if(j<len(r)):\n",
+    "        while (j<len(r)):\n",
     "            arr[k]=r[j]\n",
     "            j+=1\n",
     "            k+=1\n",
